--- a/about-2.html
+++ b/about-2.html
@@ -81,17 +81,17 @@
                                 </ul>
                             </li>
                             <li class="active">
-                                <a href="about.html">About</a>
+                                <a href="sobre-nos.html">About</a>
                                 <ul>
-                                	<li><a href="about.html">About type 1</a></li>
+                                	<li><a href="sobre-nos.html">About type 1</a></li>
                                     <li><a href="about-2.html">About type 2</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="portfolio-3col.html">Work</a>
+                                <a href="#">Work</a>
                                 <ul>	
-                                	<li><a href="portfolio-4col.html">Portfolio 4 Column</a></li>
-                                    <li><a href="portfolio-3col.html">Portfolio 3 Column</a></li>
+                                	<li><a href="#">Portfolio 4 Column</a></li>
+                                    <li><a href="#">Portfolio 3 Column</a></li>
                                     <li><a href="portfolio-2col.html">Portfolio 2 Column</a></li>
                                     <li><a href="portfolio-1col.html">Portfolio 1 Column</a></li>
                                     <li><a href="portfolio-single.html">Portfolio Single</a></li>
@@ -104,9 +104,9 @@
                                 <ul>
                                 	<li><a href="blog-index.html">Blog Full</a></li>
                                     <li><a href="blog-index-3.html">Blog Centered</a></li>
-                                    <li><a href="blog-index-2.html">Blog w/ Sidebar</a></li>
+                                    <li><a href="noticias.html">Blog w/ Sidebar</a></li>
                                      
-                                    <li><a href="blog-post.html">Blog Single w/ Sidebar</a></li>
+                                    <li><a href="noticia-simples.html">Blog Single w/ Sidebar</a></li>
                                     <li><a href="blog-post-2.html">Blog Single Centered</a></li>
                                 </ul>
                             </li>
@@ -119,9 +119,9 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="services.html">Services</a>
+                                <a href="servicos.html">Services</a>
                                 <ul>
-                                	<li><a href="services.html">Services type 1</a></li>
+                                	<li><a href="servicos.html">Services type 1</a></li>
                                     <li><a href="services-2.html">Services type 2</a></li>
                                 </ul>
                             </li>
