--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                                     <div class="big-inner">
                                         <h2>Bem vindo ao CONDUX</h2>
                                         <p>A CONDUX é uma empresa provedora de serviços e soluções nas áreas, CONTABIL, FISCAL, TRIBUTÁRIA, FINANCEIRA e de RECURSOS HUMANOS.</p>
-                                        <a href="#" class="btn btn-default ">Conheça</a>
+                                        <a href="#" class="btn btn-primary ">Conheça</a>
                                     </div>
                                 </div>
                             </div>
@@ -100,7 +100,7 @@
                                     <div class="big-inner">
                                         <h2>Bem vindo ao CONDUX</h2>
                                         <p>A CONDUX é uma empresa provedora de serviços e soluções nas áreas, CONTABIL, FISCAL, TRIBUTÁRIA, FINANCEIRA e de RECURSOS HUMANOS.</p>
-                                        <a href="#" class="btn btn-default ">Conheça</a>
+                                        <a href="#" class="btn btn-primary ">Conheça</a>
                                     </div>
                                 </div>
                             </div>
@@ -153,7 +153,7 @@
                             <div class="input-group header-search">
                                 <input type="text" class="form-control" name="s" />
                                     <span class="input-group-btn">
-                                      <button class="btn btn-default" type="submit"><i class="entyp-search-1"></i></button>
+                                      <button class="btn btn-primary" type="submit"><i class="entyp-search-1"></i></button>
                                     </span>
                             </div>
                         </form>
@@ -219,7 +219,7 @@
                 <div class="content">
                     Orientamos você a escolher a melhor forma jurídica de iniciar o seu negócio e atuar no mercado com a menor carga tributária possível
               </div>
-                <button class="btn btn-default btn-statement" type="submit">Saiba como</button>
+                <button class="btn btn-primary btn-statement" type="submit">Saiba como</button>
             </div>
         </div>
     </div>
@@ -255,7 +255,7 @@
                                 <figure>
                                     <img src="content/recentpost01.jpg" alt="img"/>
                                     <div class="overlay">
-                                        <a href="noticia-simples.html" class="btn btn-default">Ler</a>
+                                        <a href="noticia-simples.html" class="btn btn-primary">Ler</a>
                                         <div class="background"></div>
                                     </div>
                                 </figure>
@@ -269,7 +269,7 @@
                                 <figure>
                                     <img src="content/recentpost02.jpg" alt="img"/>
                                     <div class="overlay">
-                                        <a href="noticia-simples.html" class="btn btn-default">Ler</a>
+                                        <a href="noticia-simples.html" class="btn btn-primary">Ler</a>
                                         <div class="background"></div>
                                     </div>
                                 </figure>
@@ -283,7 +283,7 @@
                                 <figure>
                                     <img src="content/recentpost03.jpg" alt="img"/>
                                     <div class="overlay">
-                                        <a href="noticia-simples.html" class="btn btn-default">Ler</a>
+                                        <a href="noticia-simples.html" class="btn btn-primary">Ler</a>
                                         <div class="background"></div>
                                     </div>
                                 </figure>
@@ -301,7 +301,7 @@
                                 <figure>
                                     <img src="content/recentpost04.jpg" alt="img"/>
                                     <div class="overlay">
-                                        <a href="noticia-simples.html" class="btn btn-default">Ler</a>
+                                        <a href="noticia-simples.html" class="btn btn-primary">Ler</a>
                                         <div class="background"></div>
                                     </div>
                                 </figure>
@@ -315,7 +315,7 @@
                                 <figure>
                                     <img src="content/recentpost05.jpg" alt="img"/>
                                     <div class="overlay">
-                                        <a href="noticia-simples.html" class="btn btn-default">Ler</a>
+                                        <a href="noticia-simples.html" class="btn btn-primary">Ler</a>
                                         <div class="background"></div>
                                     </div>
                                 </figure>
@@ -329,7 +329,7 @@
                                 <figure>
                                     <img src="content/recentpost06.jpg" alt="img"/>
                                     <div class="overlay">
-                                        <a href="noticia-simples.html" class="btn btn-default">Ler</a>
+                                        <a href="noticia-simples.html" class="btn btn-primary">Ler</a>
                                         <div class="background"></div>
                                     </div>
                                 </figure>
@@ -558,7 +558,7 @@
     <h2>
         "Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat."
     </h2>
-    <button class="btn btn-default btn-statement" type="submit">Veja outras avaliações</button>
+    <button class="btn btn-primary btn-statement" type="submit">Veja outras avaliações</button>
 </section>
 </div>
 <footer class="main-footer">
