--- a/login.html
+++ b/login.html
@@ -126,20 +126,7 @@
 				<div class="row">
 					<div class="col-sm-12">
 						<div class="col-sm-4 col-xs-12">
-							<div class="title">Contatos</div>
-						</div>
-						<div class="col-sm-8 col-xs-12">
-							<div class="title-content">
-								<address>
-									Rua XXXXX<br/>
-									bairro YYYY<br/>
-									BH/MG
-								</address>
-								<div class="contact-details">
-									+55 (31) xxxx-xxxx<br/>
-									email@email.com
-								</div>
-							</div>
+							<div class="title">Entrar</div>
 						</div>
 					</div>
 				</div>
@@ -163,18 +150,66 @@
 										<input type="email" class="form-control" id="email" name="email" placeholder="E-mail">
 									</div>
 								</div>
-								<div class="row">
-									<div class="col-sm-8">
-										<textarea class="form-control" id="message" name="message" placeholder="Mensagem"></textarea>
-									</div>
-								</div>
-								<button type="submit" class="btn btn-primary">Enviar Mensagem</button>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <input type="password" class="form-control" id="email" name="email" placeholder="Senha">
+                                    </div>
+                                </div>
+								<button type="submit" class="btn btn-primary">Entrar</button>
 							</form>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
+
+<section class="line">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="col-sm-4 col-xs-12">
+                            <div class="title">Cadastrar</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="contact-container">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="col-sm-4">
+                        </div>
+                        <div class="col-sm-8">
+                            <form role="form">
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <input type="text" class="form-control" id="name" name="name" placeholder="Nome">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <input type="email" class="form-control" id="email" name="email" placeholder="E-mail">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <input type="email" class="form-control" id="email" name="email" placeholder="Senha">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <input type="email" class="form-control" id="email" name="email" placeholder="Confirmar Senha">
+                                    </div>
+                                </div>
+                                <button type="submit" class="btn btn-primary">Cadastrar</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 		<section class="map-container">
 			<div class="google-maps"></div>
 		</section>
