--- a/servicos.html
+++ b/servicos.html
@@ -57,7 +57,7 @@
                             <div class="input-group header-search">
                                 <input type="text" class="form-control" name="s" />
                                     <span class="input-group-btn">
-                                      <button class="btn btn-default" type="submit"><i class="entyp-search-1"></i></button>
+                                      <button class="btn btn-primary" type="submit"><i class="entyp-search-1"></i></button>
                                     </span>
                             </div>
                         </form>
@@ -118,7 +118,7 @@
     <h2>
         "Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat."
     </h2>
-    <button class="btn btn-default btn-statement" type="submit">Conheça</button>
+    <button class="btn btn-primary btn-statement" type="submit">Conheça</button>
 </section>
 <section class="line">
     <div class="container">
@@ -260,7 +260,7 @@
     <h2>
      “Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.”
     </h2>
-            <button class="btn btn-default btn-statement" type="submit">Contato-nos</button>
+            <button class="btn btn-primary btn-statement" type="submit">Contato-nos</button>
 </section>
 </div>
 <footer class="main-footer">
