--- a/about-2.html
+++ b/about-2.html
@@ -60,7 +60,7 @@
                             <div class="input-group header-search">
                                 <input type="text" class="form-control" name="s" />
                                     <span class="input-group-btn">
-                                      <button class="btn btn-default" type="submit"><i class="entyp-search-1"></i></button>
+                                      <button class="btn btn-primary" type="submit"><i class="entyp-search-1"></i></button>
                                     </span>
                             </div>
                         </form>
@@ -160,7 +160,7 @@
         “The Carnatic anchored at the quay near the custom-house, in the midst of a crowd of ships bearing the flags
         of all nations. Passepartout went timidly ashore on this”
     </h2>
-    <button class="btn btn-default btn-statement" type="submit">Learn more</button>
+    <button class="btn btn-primary btn-statement" type="submit">Learn more</button>
 </section>
 <section class="line">
     <div class="container">
