Ultima versão do site

--- a/noticias.html
+++ b/noticias.html
@@ -34,7 +34,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="/"><img src="content/logo.png" alt="img"/></a>
+                        <a class="navbar-brand" href="/embradic-condux/index.html"><img src="content/logo.png" alt="img"/></a>
                     </div>
                 </div>
                 <div class="col-sm-9">
@@ -463,7 +463,7 @@
         </div>
     </div>
 </section>
-<section class="statement red statement-blog-2">
+<section class="statement blue statement-blog-2">
     <h2>
         “Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.”
     </h2>
