--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="/"><img src="content/logo.png" alt="img"/></a>
+							<a class="navbar-brand" href="/embradic-condux/index.html"><img src="content/logo.png" alt="img"/></a>
 						</div>
 					</div>
 					<div class="col-sm-9">
@@ -115,7 +115,7 @@
     </div>
 	</header>
 	
-	<section class="statement red statement-contact">
+	<section class="statement blue statement-contact">
 			<h2>
 				"Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat."
 			</h2>
@@ -209,10 +209,6 @@
                 </div>
             </div>
         </section>
-
-		<section class="map-container">
-			<div class="google-maps"></div>
-		</section>
 	</div>
 		<footer class="main-footer">
     <div class="container">
@@ -294,29 +290,5 @@
 		<script src="js/vendor/simpleInstagramFancybox.js"></script>
 		<script src="js/vendor/fitvids.js"></script>
 		<script src="js/main.js"></script>
-
-		<script>
-			$(document).ready(function() {
-				$('.google-maps').gmap3({
-					map:{
-						address: "Brazil",
-						options:{
-							zoom: 14,
-							mapTypeId: google.maps.MapTypeId.ROADMAP,
-							mapTypeControl: false,
-							mapTypeControlOptions: {
-								style: google.maps.MapTypeControlStyle.DEFAULT
-							},
-							navigationControl: true,
-							scrollwheel: false,
-							streetViewControl: false
-						}
-					},
-					marker:{
-						address: "Brazil"
-					}
-				});
-			});
-		</script>
 	</body>
 </html>
