--- a/noticia-simples.html
+++ b/noticia-simples.html
@@ -34,7 +34,7 @@
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="/"><img src="content/logo.png" alt="img"/></a>
+                            <a class="navbar-brand" href="/embradic-condux/index.html"><img src="content/logo.png" alt="img"/></a>
                         </div>
                     </div>
                     <div class="col-sm-9">
