--- a/login.html
+++ b/login.html
@@ -34,7 +34,9 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="/embradic-condux/index.html"><img src="content/logo.png" alt="img"/></a>
+							<div id="control-logo-header">
+                                <a class="navbar-brand" href="/embradic-condux/index.html"><img src="content/logo.png" alt="img"/></a>
+                            </div>
 						</div>
 					</div>
 					<div class="col-sm-9">
@@ -64,6 +66,9 @@
 						</div>
 						  <div class="col-sm-11">
                         <ul class="nav navbar-nav main-nav">
+                            <li id="control-logo-menu">
+                                <a class="navbar-brand" href="/embradic-condux/index.html"><img src="content/logo.png" alt="img"/></a>
+                            </li>
                             <li>
                                 <a href="index.html">Início</a>
                             </li>
